[project]
name = "Marzban"
version = "0.8.1"
description = "Unified GUI Censorship Resistant Solution Powered by Xray"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "anyio==4.2.0",
    "apscheduler==3.9.1.post1",
    "bcrypt==4.0.1",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "click==8.1.7",
    "commentjson==0.9.0",
    "cryptography==43.0.1",
    "deprecated==1.2.13",
    "fastapi==0.115.2",
    "grpcio==1.67.1",
    "grpcio-tools==1.67.1",
    "httptools==0.6.4",
    "jdatetime==4.1.1",
    "jinja2==3.1.4",
    "markupsafe==2.1.1",
    "passlib==1.7.4",
    "psutil==5.9.4",
    "pydantic==2.10.4",
    "pyjwt==2.8.0",
    "pymysql==1.1.1",
    "pyopenssl==24.2.1",
    "pysocks==1.7.1",
    "pytelegrambotapi==4.9.0",
    "python-dateutil==2.8.2",
    "python-decouple==3.6",
    "python-dotenv==0.21.1",
    "python-multipart==0.0.7",
    "pyyaml==6.0.2",
    "qrcode==7.4.2",
    "requests==2.32.3",
    "rich==13.7.1",
    "rpyc==6.0.0",
    "rsa==4.9",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.36",
    "starlette==0.40.0",
    "typer==0.7.0",
    "urllib3==1.26.19",
    "uvicorn==0.27.0.post1",
    "websocket-client==1.7.0",
    "websockets==12.0",
]

[tool.ruff]
line-length = 120
